- added /forget
- zsh-style underscore equivalence in setting names
- "Now connected to" en "Connection lost" worden nu gebufferd en gelogd. Ook zo voor client connecties, startup, en shutdown.
- autoreconnect setten vanuit user heeft nu onmiddelijk effect
- /get en /set weg, gebruik /option
- /listopts geeft nu ook values terug en is gerenamed naar /settings
- mooproxy.crashed gerenamed naar mooproxy.panic
- /help flink opgepimpt, setting beschrijvingen verbeterd
- veel settings gerenamed
- Weg met "authentication succesful", lang leve "this is mooproxy".
- Ook geeftie nu /help, wat ook handig is voor mensen die hun commandstring vergeten zijn. [from: christian]
- ACE!
- Tweaked autoreconnect delay.
- Fixed empty line between reconnection attempts.
- Rate-limited connection attempts, privileged addresses, /authinfo.



01-09-2007  -  0.1.3
--------------------
 * /recall now allows users to search for specific lines by time and contents.
   See the README for details.
 * New option; autoreconnect will cause mooproxy to reconnect when it loses
   the connection to the server.
 * New option; newinfostring allows users to use a custom prefix for "New
   lines" and all related messages. This should make it easier to spot those
   lines when the client connects.
 * Setting the listenport option from within mooproxy is now allowed, and
   actually attempts to rebind to the new port.
 * Context lines produced when connecting now have the ASCII BELL character
   filtered from them, so you won't hear a sound from old lines.
 * Tab characters are now included in the logs instead of being discarded.
 * Improved logging performance.
 * Fixed a file descriptor leak on server hostname resolve.
 * Fixed a small bug that sometimes caused the timestamps in the logfiles to
   be off by one second.
 * Fixed a small bug where mooproxy would sometimes say "No new lines" instead
   of "End of new lines".


05-03-2007  -  0.1.2
--------------------