@@ -1,3 +1,4 @@
+- Shutdown on SIGTERM/QUIT (QUIT forces).
 - added /forget
 - zsh-style underscore equivalence in setting names
 - "Now connected to" en "Connection lost" worden nu gebufferd en gelogd. Ook zo voor client connecties, startup, en shutdown.
